--- a/vote-counter/package.json
+++ b/vote-counter/package.json
@@ -17,6 +17,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.2",
+    "react-id-generator": "^3.0.0",
     "react-scripts": "^3.4.0"
   },
   "scripts": {
