--- a/vote-counter/package.json
+++ b/vote-counter/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.12",
+    "dotenv": "^8.2.0",
     "exceljs": "^3.8.1",
     "firebase": "^7.13.1",
     "jquery": "^3.4.1",
